--- a/examples/petclinic/pom.xml
+++ b/examples/petclinic/pom.xml
@@ -41,6 +41,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>test</scope>
+		</dependency>		
+		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>test</artifactId>
 			<version>1.2-SNAPSHOT</version>
