--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
   <version>1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>simplity-all</name>
-
   <scm>
   	<developerConnection>scm:git:https://github.com/simplity/simplity/tree/master/simplity</developerConnection>
     <tag>all-1.2-SNAPSHOT</tag>
@@ -17,12 +16,13 @@
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-release-plugin</artifactId>
   			<version>2.5.3</version>
-  		</plugin>
+  		</plugin>		
   	</plugins>
   </build>
   <modules>
+    <module>install-ojdbc6</module>  
     <module>simplity</module>
     <module>utils</module>
-    <module>examples</module>	
+    <module>examples</module>
   </modules>
 </project>
