--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,28 @@
   			<artifactId>maven-release-plugin</artifactId>
   			<version>2.5.3</version>
   		</plugin>		
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.0.2</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>install</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/jars</outputDirectory>
+              <resources>          
+                <resource>                	
+                  <directory>${basedir}/simplity/kernel/target</directory>
+                  <include>*.jar</include>
+                </resource>
+              </resources>              
+            </configuration>            
+          </execution>
+        </executions>
+      </plugin>  		
   	</plugins>
   </build>
   <modules>
