--- a/simplity/kernel/.gitignore
+++ b/simplity/kernel/.gitignore
@@ -1,4 +1,11 @@
-/settings/
+/.metadata/
+/RemoteSystemsTempFiles/
+/Servers/
+/.recommenders/
+/.settings/
+/javadocs/ 
 /target/
-.classpath
-.project
+.DS_Store
+.docx
+
+
