--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-**/.metadata/
-**/RemoteSystemsTempFiles/
-**/Servers/
-**/.recommenders/
-**/.settings/
-**/javadocs/ 
-**/target/
+**/.metadata/*
+**/RemoteSystemsTempFiles/*
+**/Servers/*
+**/.recommenders/*
+**/.settings/*
+**/javadocs/* 
+**/target/*
 **/.DS_Store
 **/.docx
 **/.project
