--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -16,7 +16,8 @@
 		<module>mcHelloWorld</module>
 		<module>wbBatch</module>
 		<module>wbFileAgent</module>
-		<module>petclinic</module>
-    <module>jmsDemo</module>
+		<module>petclinic</module>		
+    		<module>jmsDemo</module>
+		<module>SimplityWithEJB</module>
   </modules>
 </project>
