--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.simplity.examples</groupId>
 	<artifactId>examples</artifactId>
@@ -10,14 +14,14 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
-
 	<modules>
 		<module>helloworld</module>
 		<module>mcHelloWorld</module>
 		<module>wbBatch</module>
 		<module>wbFileAgent</module>
-		<module>petclinic</module>		
-    		<module>jmsDemo</module>
-		<module>SimplityWithEJB</module>
-  </modules>
+		<module>petclinic</module>
+		<module>jmsDemo</module>
+		<module>springIntegration</module>
+		<module>ejbIntegration</module>
+	</modules>
 </project>
