--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -25,6 +25,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
