--- a/examples/springIntegration/src/main/webapp/WEB-INF/web.xml
+++ b/examples/springIntegration/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
 
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/abc/*</url-pattern>
+		<url-pattern>/spring/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
