--- a/examples/ejbIntegration/pom.xml
+++ b/examples/ejbIntegration/pom.xml
@@ -27,12 +27,10 @@
 			<version>3.0.1</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.ejb/ejb -->
 		<dependency>
-			<groupId>javax.ejb</groupId>
-			<artifactId>ejb</artifactId>
-			<version>2.1</version>
-			<scope>test</scope>
+<groupId>javax.ejb</groupId>
+<artifactId>ejb-api</artifactId>
+<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
