--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -52,6 +52,16 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.166</version>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.20</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>				
 	</dependencies>
 	<build>
 		<finalName>helloworld</finalName>
