--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -104,6 +102,64 @@
 			<version>1.2.132</version>
 			<scope>test</scope>
 		</dependency>
+<!-- 		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>1.6.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>1.6.2</version>
+			<scope>test</scope>
+		</dependency> -->
+		<dependency>
+
+	            <groupId>junit</groupId>
+
+            <artifactId>junit</artifactId>
+
+            <version>4.11</version>
+
+            <scope>test</scope>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.mockito</groupId>
+
+            <artifactId>mockito-core</artifactId>
+
+            <version>2.0.5-beta</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.powermock</groupId>
+
+            <artifactId>powermock-api-mockito</artifactId>
+
+            <version>1.6.2</version>
+
+            <scope>test</scope>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.powermock</groupId>
+
+            <artifactId>powermock-module-junit4</artifactId>
+
+            <version>1.6.2</version>
+
+            <scope>test</scope>
+
+        </dependency>
+		
 	</dependencies>
 	<build>
 		<testResources>
