fixed width supports last field to have variable length

--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -97,6 +97,7 @@
 		<testResources>
 			<testResource>
 				<directory>${project.basedir}/src/test/resources</directory>
+				<filtering>true</filtering>
 			</testResource>
 		</testResources>
 		<plugins>
