--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
+			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -102,7 +102,7 @@
 			<version>1.2.132</version>
 			<scope>test</scope>
 		</dependency>
- 		<dependency>
+ 		<!-- <dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito</artifactId>
 			<version>1.6.2</version>
@@ -113,7 +113,7 @@
 			<artifactId>powermock-module-junit4</artifactId>
 			<version>1.6.2</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>	 -->	
 	</dependencies>
 	<build>
 		<testResources>
