--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -143,6 +143,47 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.12.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.btmatthews.maven.plugins</groupId>
+				<artifactId>ldap-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<monitorPort>11389</monitorPort>
+					<monitorKey>ldap</monitorKey>
+					<daemon>true</daemon>
+					<rootDn>dc=sevenSeas</rootDn>
+					<ldapPort>10389</ldapPort>
+					<ldifFile>${project.basedir}/src/test/resources/data/ldap/data.ldif</ldifFile>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-server</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-server</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>			
 		</plugins>
 		<pluginManagement>
 			<plugins>
