--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -2,8 +2,7 @@
 <project
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simplity.examples</groupId>
@@ -30,7 +29,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
@@ -143,47 +142,6 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.12.4</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.btmatthews.maven.plugins</groupId>
-				<artifactId>ldap-maven-plugin</artifactId>
-				<version>1.3.2</version>
-				<configuration>
-					<monitorPort>11389</monitorPort>
-					<monitorKey>ldap</monitorKey>
-					<daemon>true</daemon>
-					<rootDn>dc=sevenSeas</rootDn>
-					<ldapPort>10389</ldapPort>
-					<ldifFile>${project.basedir}/src/test/resources/data/ldap/data.ldif</ldifFile>
-				</configuration>
-				<executions>
-					<execution>
-						<id>start-server</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>stop-server</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>			
 		</plugins>
 		<pluginManagement>
 			<plugins>
