--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -93,7 +93,13 @@
 			<artifactId>h2</artifactId>
 			<version>1.2.132</version>
 			<scope>test</scope>
-		</dependency>	
+		</dependency>
+		<dependency> 
+			<groupId>org.jvnet.mock-javamail</groupId>
+			<artifactId>mock-javamail</artifactId>
+			<version>1.9</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
