--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -102,6 +102,29 @@
 			<version>1.9</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.activemq</groupId>
+		    <artifactId>activemq-core</artifactId>
+		    <version>5.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mockrunner</groupId>
+			<artifactId>mockrunner-jms</artifactId>
+			<version>1.1.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.mockrunner</groupId>
+		    <artifactId>mockrunner-ejb</artifactId>
+		    <version>1.1.2</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.mockrunner</groupId>
+		    <artifactId>mockrunner-core</artifactId>
+		    <version>1.1.2</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
