--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -96,34 +94,16 @@
 			<version>1.2.132</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency> 
+		<dependency>
 			<groupId>org.jvnet.mock-javamail</groupId>
 			<artifactId>mock-javamail</artifactId>
 			<version>1.9</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.activemq</groupId>
-		    <artifactId>activemq-core</artifactId>
-		    <version>5.7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.mockrunner</groupId>
-			<artifactId>mockrunner-jms</artifactId>
-			<version>1.1.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>com.mockrunner</groupId>
-		    <artifactId>mockrunner-ejb</artifactId>
-		    <version>1.1.2</version>
-		    <scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>com.mockrunner</groupId>
-		    <artifactId>mockrunner-core</artifactId>
-		    <version>1.1.2</version>
-		    <scope>test</scope>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-core</artifactId>
+			<version>5.7.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -146,6 +126,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
+				<configuration>
+					<argLine>-Djava.naming.factory.initial=org.simplity.test.mock.ldap.MockInitialContextFactory</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
