--- a/pom.xml
+++ b/pom.xml
@@ -1,50 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.simplity</groupId>
-  <artifactId>all</artifactId>
-  <version>1.2-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>simplity-all</name>
-  <scm>
-  	<developerConnection>scm:git:https://github.com/simplity/simplity/tree/master/simplity</developerConnection>
-    <tag>all-1.2-SNAPSHOT</tag>
-  </scm>
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-release-plugin</artifactId>
-  			<version>2.5.3</version>
-  		</plugin>		
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.0.2</version>
-        <executions>
-          <execution>
-            <id>copy-resources</id>
-            <phase>install</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${basedir}/jars</outputDirectory>
-              <resources>          
-                <resource>                	
-                  <directory>${basedir}/simplity/kernel/target</directory>
-                  <include>*.jar</include>
-                </resource>
-              </resources>              
-            </configuration>            
-          </execution>
-        </executions>
-      </plugin>  		
-  	</plugins>
-  </build>
-  <modules>
-    <module>install-ojdbc6</module>  
-    <module>simplity</module>
-    <module>utils</module>
-    <module>examples</module>
-  </modules>
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.simplity</groupId>
+	<artifactId>all</artifactId>
+	<version>1.2-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>simplity-all</name>
+	<properties>
+		<gpg.passphrase>S4SuccessPGP</gpg.passphrase>
+	</properties>
+	<scm>
+		<connection>scm:git:git://github.com/simplity/simplity.git</connection>
+		<developerConnection>scm:git:git@github.com:simplity/simplity.git</developerConnection>
+		<url>https://github.com/simplity/simplity</url>
+		<tag>all-1.2-SNAPSHOT</tag>
+	</scm>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.2</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/jars</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/simplity/kernel/target</directory>
+									<include>*.jar</include>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<modules>
+		<module>install-ojdbc6</module>
+		<module>simplity</module>
+		<module>utils</module>
+		<module>examples</module>
+	</modules>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus snapshot repository</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Sonatype Nexus release repository</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	<profiles>
+		<profile>
+			<id>ci</id>
+			<modules>
+				<module>simplity</module>
+				<module>utils</module>
+				<module>examples</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.4</version>
+						<configuration>
+							<passphrase>${gpg.passphrase}</passphrase>
+						</configuration>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
