--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.simplity.utils</groupId>
 	<artifactId>utils</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 	<packaging>pom</packaging>
 	<name>utils</name>
 	<properties>
