[maven-release-plugin] prepare release all-1.2

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 				<version>2.5.3</version>
 				<configuration>
 					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+			        <pushChanges>false</pushChanges>
 				</configuration>
 			</plugin>
 			<plugin>
