--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>helloworld</artifactId>
 	<packaging>war</packaging>
@@ -35,12 +35,12 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>test</artifactId>
-			<version>1.2</version>
+			<version>1.2.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -134,7 +134,7 @@
 					<dependency>
 						<groupId>org.simplity.utils</groupId>
 						<artifactId>template</artifactId>
-						<version>1.2</version>
+						<version>1.2.1-SNAPSHOT</version>
 					</dependency>
 				</dependencies>
 			</plugin>
