--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.simplity.examples</groupId>
 	<artifactId>examples</artifactId>
-	<version>1.2</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>examples</name>
 	<properties>
