--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.simplity</groupId>
 	<artifactId>all</artifactId>
-	<version>1.2</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>simplity-all</name>
 	<properties>
@@ -13,7 +13,7 @@
 		<connection>scm:git:git://github.com/simplity/simplity.git</connection>
 		<developerConnection>scm:git:git@github.com:simplity/simplity.git</developerConnection>
 		<url>https://github.com/simplity/simplity.git</url>
-		<tag>all-1.2</tag>
+		<tag>all-1.2-SNAPSHOT</tag>
 	</scm>
 	<build>
 		<plugins>
