--- a/utils/swagger-doc/pom.xml
+++ b/utils/swagger-doc/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.simplity.utils</groupId>
 		<artifactId>utils</artifactId>
-		<version>1.2</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>swagger-doc</artifactId>
 	<name>swagger-doc</name>
