--- a/utils/test/pom.xml
+++ b/utils/test/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.simplity.utils</groupId>
 		<artifactId>utils</artifactId>
-		<version>1.2</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>test</artifactId>
 
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
