--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simplity</groupId>
@@ -9,6 +12,10 @@
 	<artifactId>kernel</artifactId>
 	<packaging>jar</packaging>
 	<name>kernel</name>
+	<properties>
+		<defaultDB>defaultDB</defaultDB>
+		<anotherDB>anotherDB</anotherDB>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>xerces</groupId>
@@ -90,7 +97,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.2.132</version>
+			<version>1.3.166</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -124,6 +131,58 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<version>1.5</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>1.3.166</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<skip>${maven.test.skip}</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<id>create-defaultSchema</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<autocommit>true</autocommit>
+							<srcFiles>
+								<srcFile>${project.build.directory}/test-classes/data/scripts/defaultSchema.sql</srcFile>
+							</srcFiles>
+							<driver>org.h2.Driver</driver>
+							<url>jdbc:h2:file:${project.build.directory}/${defaultDB}</url>
+							<username>sa</username>
+							<password />
+							<autocommit>true</autocommit>
+						</configuration>
+					</execution>
+					<execution>
+						<id>create-anotherSchema</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<srcFiles>
+								<srcFile>${project.build.directory}/test-classes/data/scripts/anotherSchema.sql</srcFile>
+							</srcFiles>
+							<driver>org.h2.Driver</driver>
+							<url>jdbc:h2:file:${project.build.directory}/${anotherDB}</url>
+							<username>sa</username>
+							<password />
+							<autocommit>true</autocommit>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
