--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -117,6 +117,11 @@
 		    <artifactId>hystrix-core</artifactId>
 		    <version>1.0.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.whalin</groupId>
+		    <artifactId>Memcached-Java-Client</artifactId>
+		    <version>3.0.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
