added refactoring util

--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -14,5 +14,6 @@
 		<module>archetype-partial</module>
 		<module>template</module>
 		<module>test</module>
+	    <module>refactoring</module>
   </modules>
 </project>
