added 1.6 java compiler args

--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -11,6 +11,8 @@
 	<packaging>jar</packaging>
 	<name>kernel</name>
 	<properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
 		<defaultDB>defaultDB</defaultDB>
 		<anotherDB>anotherDB</anotherDB>
 	</properties>
